Improve migration with sorting (#53)
